# engineq

./: .env.example  LICENSE  README.md  engineq.code-workspace  models.py  package-lock.json  package.json
.github/workflows/: flake8.yaml
acura/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  __init__.py  __main__.py  chain.py  conf.py  dockerfile  justfile  models.py  mq.py  playground.py  pyproject.toml  requirements.txt
acura/.github/workflows/: flake8.yaml
acura/internal/: __init__.py  chain.py  conf.py  models.py  mq.py
acura/internal/agents/: __init__.py  yt_analyzer_agent.py
acura/internal/models/: __init__.py  dao.py  sql.py
acura/internal/models/codegen/: __init__.py  models.py
acura/internal/models/dao/: __init__.py
acura/internal/services/: brave_search.py  embeddings.py  spotify.py  track_embeddings.py
acura/notebooks/: display_graph.ipynb
acura/scripts/: generate_models.py  run_dbmate_cli.py  sqlcodegen.sh
docker/: docker-compose.dev.yml  docker-compose.yml
migrations/: 20250310090853_create_table__subscribers.sql  20250310090947_create_tracks_table.sql  20250310091002_create_playlists_table.sql  20250310091011_create_table__suggestions.sql  20250310204619_create_playbacks_table.sql  20250310204619_create_table__playback.sql  20250313163129_create_table__prompts.sql  20250325122728_create_trigger__default-prompt.sql  20250403100111_enable_extension__embeddings.sql  20250403100150_alter_table__tracks.sql  20250406124326_alter_table__suggestions.sql  20250406125212_major_refactor_suggestions_playback_fk.sql  20250408181738_alter_table__suggestions.sql  20250408190023_alter_table__tracks.sql  20250410082032_alter_table__prompts.sql  20250415052516_alter_table__subscribers.sql  README.md
migrator/: .env.example  package-lock.json  package.json
ui/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
ui/src/: middleware.ts
ui/src/actions/: auth.ts  sub.ts
ui/src/app/: error.tsx  layout.tsx
ui/src/components/: navigation.tsx  primitives.ts
ui/src/config/: fonts.ts  site.ts
ui/src/lib/: sql.ts
vui/: .env.example  package-lock.json  package.json
vui/src/: middleware.ts
vui/src/lib/: sql.ts
(+37 files in other folders)
