[project]
name = "acura"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "pydantic-ai (>=0.0.36,<0.0.37)",
    "python3-discogs-client (>=2.8,<3.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlacodegen (>=3.0.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
