[project]
name = "acura"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "pydantic-ai[logfire] (>=0.0.39,<0.0.40)",
    "pydantic (>=2.10.6,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlacodegen (>=3.0.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "pydantic-graph (==0.0.39)",
    "python-levenshtein (>=0.27.1,<0.28.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "openai (>=1.70.0,<2.0.0)",
    "ipython (>=9.0.2,<10.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "pgvector (>=0.4.0,<0.5.0)",
    "requests (>=2.0.0,<3.0.0)"
]

[project.scripts]
generate-db-models = "acura.scripts.generate_models:run_sqlacodegen"
dbmate-cli = "acura.scripts.run_dbmate_cli:main"
